Atualização de Imagem

--- a/src/app/cadastrar-evento/cadastrar-evento.component.html
+++ b/src/app/cadastrar-evento/cadastrar-evento.component.html
@@ -200,7 +200,7 @@
                 <div class="modal-footer">
                     <div class="input-group">
                         <div class="custom-file">
-                          <input type="file" class="custom-file-input" id="imagem" name="imagem" aria-describedby="btnSalvarImagem" (change)="fileProgress($event)">
+                          <input type="file" class="custom-file-input" id="fileimg" name="fileimg" aria-describedby="btnSalvarImagem" (change)="fileProgress($event)">
                           <label class="custom-file-label" for="imagem">Escolha uma Imagem</label>
                         </div>
                         <div class="input-group-append">
