--- a/src/app/cadastrar-evento/cadastrar-evento.component.html
+++ b/src/app/cadastrar-evento/cadastrar-evento.component.html
@@ -200,11 +200,11 @@
                 <div class="modal-footer">
                     <div class="input-group">
                         <div class="custom-file">
-                          <input type="file" class="custom-file-input" id="fileimg" name="fileimg" aria-describedby="btnSalvarImagem" (change)="fileProgress($event)">
+                          <input type="file" class="custom-file-input" id="fileimg" name="fileimg" aria-describedby="btnSalvarImagem" (change)="preview($event, formImagem)">
                           <label class="custom-file-label" for="imagem">Escolha uma Imagem</label>
                         </div>
                         <div class="input-group-append">
-                          <button class="btn btn-outline-secondary" type="button" id="btnSalvarImagem" (click)="salvarImagem(formImagem)">Salvar</button>
+                          <button class="btn btn-outline-secondary" type="button" id="btnSalvarImagem" (click)="salvarImagem()">Salvar</button>
                         </div>
                       </div>
                 </div>
