--- a/src/app/cadastrar-evento/cadastrar-evento.component.css
+++ b/src/app/cadastrar-evento/cadastrar-evento.component.css
@@ -1,29 +1,9 @@
-#imagemPreview {
-    margin-bottom: 15px;
-    background-color: dimgrey;
-    border-radius: .25rem;
-    width: 45%;
-    height: 280px;
-    left: 50%;
-    position: relative;
-    transform: translateX(-50%);
-}
-
 #imagem {
     width: 100%;
     height: 280px;
 }
 
-#cardPreview{
-    margin-bottom: 15px;
-    border-radius: .25rem;
-    width: 60%;
-    left: 50%;
-    position: relative;
-    transform: translateX(-50%);
-}
-
-#card {
+#imgCard{
     width: 100%;
     height: 280px;
 }
