--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -10,7 +10,7 @@
           <a class="nav-link" href="#">Eventos na sua Área</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Todos os Eventos</a>
+          <a class="nav-link" [routerLink]="['/eventos']" routerLinkActive="router-link-active" >Todos os Eventos</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
